Updated docs to current version

--- a/pywebfuzz_docs/toc-pywebfuzz.encoderlib-module.html
+++ b/pywebfuzz_docs/toc-pywebfuzz.encoderlib-module.html
@@ -25,7 +25,8 @@
      >hex_encode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#hex_entity_encode"
      >hex_entity_encode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#hexentity_decode"
      >hexentity_decode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#md5_hash"
-     >md5_hash</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#rot13_decode"
+     >md5_hash</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#oraclechr_encode"
+     >oraclechr_encode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#rot13_decode"
      >rot13_decode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#rot13_encode"
      >rot13_encode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#sha1_hash"
      >sha1_hash</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#sqlchar_encode"
