--- a/pywebfuzz_docs/toc-everything.html
+++ b/pywebfuzz_docs/toc-everything.html
@@ -15,7 +15,8 @@
   <h2 class="toc">All Classes</h2>
     <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads-class.html"
      >pywebfuzz.fuzzdb.attack_payloads</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.all_attacks-class.html"
-     >pywebfuzz.fuzzdb.attack_payloads.all_attacks</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.disclosure_directory-class.html"
+     >pywebfuzz.fuzzdb.attack_payloads.all_attacks</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.control_chars-class.html"
+     >pywebfuzz.fuzzdb.attack_payloads.control_chars</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.disclosure_directory-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.disclosure_directory</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.disclosure_directory.generic-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.disclosure_directory.generic</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.disclosure_directory.unix-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.disclosure_directory.unix</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.disclosure_directory.win-class.html"
@@ -25,7 +26,8 @@
      >pywebfuzz.fuzzdb.attack_payloads.disclosure_localpaths.unix</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.disclosure_source-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.disclosure_source</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.file_upload-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.file_upload</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.format_strings-class.html"
-     >pywebfuzz.fuzzdb.attack_payloads.format_strings</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.http_protocol-class.html"
+     >pywebfuzz.fuzzdb.attack_payloads.format_strings</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.html_fuzz-class.html"
+     >pywebfuzz.fuzzdb.attack_payloads.html_fuzz</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.http_protocol-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.http_protocol</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.integer_overflow-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.integer_overflow</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.ldap-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.ldap</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.lfi-class.html"
@@ -76,7 +78,8 @@
      >pywebfuzz.encoderlib.hex_encode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#hex_entity_encode"
      >pywebfuzz.encoderlib.hex_entity_encode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#hexentity_decode"
      >pywebfuzz.encoderlib.hexentity_decode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#md5_hash"
-     >pywebfuzz.encoderlib.md5_hash</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#rot13_decode"
+     >pywebfuzz.encoderlib.md5_hash</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#oraclechr_encode"
+     >pywebfuzz.encoderlib.oraclechr_encode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#rot13_decode"
      >pywebfuzz.encoderlib.rot13_decode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#rot13_encode"
      >pywebfuzz.encoderlib.rot13_encode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#sha1_hash"
      >pywebfuzz.encoderlib.sha1_hash</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#sqlchar_encode"
