make_request from utils now supports methods other than GET and POST. make_request is also fault tolerant handling exceptions and returning reasons. Also, make_request now returns headers, content, status code, and time it took to complete the request.

--- a/pywebfuzz_docs/toc-everything.html
+++ b/pywebfuzz_docs/toc-everything.html
@@ -38,11 +38,7 @@
      >pywebfuzz.fuzzdb.attack_payloads.rfi</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.server_side_include-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.server_side_include</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.sql_injection-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.sql_injection</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.sql_injection.detect-class.html"
-     >pywebfuzz.fuzzdb.attack_payloads.sql_injection.detect</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.sql_injection.detect.generic-class.html"
-     >pywebfuzz.fuzzdb.attack_payloads.sql_injection.detect.generic</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.sql_injection.detect.ms_sql-class.html"
-     >pywebfuzz.fuzzdb.attack_payloads.sql_injection.detect.ms_sql</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.sql_injection.detect.mysql-class.html"
-     >pywebfuzz.fuzzdb.attack_payloads.sql_injection.detect.mysql</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.sql_injection.detect.oracle-class.html"
-     >pywebfuzz.fuzzdb.attack_payloads.sql_injection.detect.oracle</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.sql_injection.exploit-class.html"
+     >pywebfuzz.fuzzdb.attack_payloads.sql_injection.detect</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.sql_injection.exploit-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.sql_injection.exploit</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.xml-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.xml</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.xpath-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.xpath</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.xss-class.html"
@@ -88,9 +84,11 @@
      >pywebfuzz.encoderlib.unicode_decode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#unicode_encode"
      >pywebfuzz.encoderlib.unicode_encode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#url_decode"
      >pywebfuzz.encoderlib.url_decode</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#url_encode"
-     >pywebfuzz.encoderlib.url_encode</a><br />    <a target="mainFrame" href="pywebfuzz.utils-module.html#generate_range"
+     >pywebfuzz.encoderlib.url_encode</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb-module.html#file_read"
+     >pywebfuzz.fuzzdb.file_read</a><br />    <a target="mainFrame" href="pywebfuzz.utils-module.html#generate_range"
      >pywebfuzz.utils.generate_range</a><br />    <a target="mainFrame" href="pywebfuzz.utils-module.html#make_request"
-     >pywebfuzz.utils.make_request</a><br />  <h2 class="toc">All Variables</h2>
+     >pywebfuzz.utils.make_request</a><br />    <a target="mainFrame" href="pywebfuzz.utils-module.html#webstring"
+     >pywebfuzz.utils.webstring</a><br />  <h2 class="toc">All Variables</h2>
     <a target="mainFrame" href="pywebfuzz-module.html#__package__"
      >pywebfuzz.__package__</a><br />    <a target="mainFrame" href="pywebfuzz.encoderlib-module.html#__package__"
      >pywebfuzz.encoderlib.__package__</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb-module.html#MODPATH"
