--- a/pywebfuzz_docs/toc-pywebfuzz.fuzzdb-module.html
+++ b/pywebfuzz_docs/toc-pywebfuzz.fuzzdb-module.html
@@ -18,7 +18,9 @@
      >discovery</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.regex-class.html"
      >regex</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.wordlists_misc-class.html"
      >wordlists_misc</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.wordlists_user_passwd-class.html"
-     >wordlists_user_passwd</a><br />  <h2 class="toc">Variables</h2>
+     >wordlists_user_passwd</a><br />  <h2 class="toc">Functions</h2>
+    <a target="mainFrame" href="pywebfuzz.fuzzdb-module.html#file_read"
+     >file_read</a><br />  <h2 class="toc">Variables</h2>
     <a target="mainFrame" href="pywebfuzz.fuzzdb-module.html#MODPATH"
      >MODPATH</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb-module.html#__package__"
      >__package__</a><br /><hr />
