--- a/pywebfuzz_docs/toc-pywebfuzz.utils-module.html
+++ b/pywebfuzz_docs/toc-pywebfuzz.utils-module.html
@@ -15,7 +15,8 @@
   <h2 class="toc">Functions</h2>
     <a target="mainFrame" href="pywebfuzz.utils-module.html#generate_range"
      >generate_range</a><br />    <a target="mainFrame" href="pywebfuzz.utils-module.html#make_request"
-     >make_request</a><br />  <h2 class="toc">Variables</h2>
+     >make_request</a><br />    <a target="mainFrame" href="pywebfuzz.utils-module.html#webstring"
+     >webstring</a><br />  <h2 class="toc">Variables</h2>
     <a target="mainFrame" href="pywebfuzz.utils-module.html#__package__"
      >__package__</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
