Updated docs to reflect current version v0.6.0

--- a/pywebfuzz_docs/toc-everything.html
+++ b/pywebfuzz_docs/toc-everything.html
@@ -13,8 +13,13 @@
 <h1 class="toc">Everything</h1>
 <hr />
   <h2 class="toc">All Classes</h2>
-    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads-class.html"
-     >pywebfuzz.fuzzdb.attack_payloads</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.all_attacks-class.html"
+    <a target="mainFrame" href="pywebfuzz.fuzzdb.Discovery-class.html"
+     >pywebfuzz.fuzzdb.Discovery</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.Discovery.FilenameBruteforce-class.html"
+     >pywebfuzz.fuzzdb.Discovery.FilenameBruteforce</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.Discovery.PredictableRes-class.html"
+     >pywebfuzz.fuzzdb.Discovery.PredictableRes</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.Discovery.PredictableRes.CMS-class.html"
+     >pywebfuzz.fuzzdb.Discovery.PredictableRes.CMS</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads-class.html"
+     >pywebfuzz.fuzzdb.attack_payloads</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.BizLogic-class.html"
+     >pywebfuzz.fuzzdb.attack_payloads.BizLogic</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.all_attacks-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.all_attacks</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.control_chars-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.control_chars</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.disclosure_directory-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.disclosure_directory</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.disclosure_directory.generic-class.html"
@@ -42,15 +47,7 @@
      >pywebfuzz.fuzzdb.attack_payloads.sql_injection.exploit</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.xml-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.xml</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.xpath-class.html"
      >pywebfuzz.fuzzdb.attack_payloads.xpath</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads.xss-class.html"
-     >pywebfuzz.fuzzdb.attack_payloads.xss</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.discovery-class.html"
-     >pywebfuzz.fuzzdb.discovery</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.discovery.filename_bruteforce-class.html"
-     >pywebfuzz.fuzzdb.discovery.filename_bruteforce</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.discovery.filename_bruteforce.file_extensions-class.html"
-     >pywebfuzz.fuzzdb.discovery.filename_bruteforce.file_extensions</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.discovery.filename_bruteforce.file_or_dir_root_wordlists-class.html"
-     >pywebfuzz.fuzzdb.discovery.filename_bruteforce.file_or_dir_root_wordlists</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.discovery.generic-class.html"
-     >pywebfuzz.fuzzdb.discovery.generic</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.discovery.generic.cms-class.html"
-     >pywebfuzz.fuzzdb.discovery.generic.cms</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.discovery.unix-class.html"
-     >pywebfuzz.fuzzdb.discovery.unix</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.discovery.win-class.html"
-     >pywebfuzz.fuzzdb.discovery.win</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.regex-class.html"
+     >pywebfuzz.fuzzdb.attack_payloads.xss</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.regex-class.html"
      >pywebfuzz.fuzzdb.regex</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.wordlists_misc-class.html"
      >pywebfuzz.fuzzdb.wordlists_misc</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.wordlists_user_passwd-class.html"
      >pywebfuzz.fuzzdb.wordlists_user_passwd</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.wordlists_user_passwd.db2-class.html"
