--- a/pywebfuzz_docs/toc-pywebfuzz.fuzzdb-module.html
+++ b/pywebfuzz_docs/toc-pywebfuzz.fuzzdb-module.html
@@ -13,9 +13,9 @@
 <h1 class="toc">Module fuzzdb</h1>
 <hr />
   <h2 class="toc">Classes</h2>
-    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads-class.html"
-     >attack_payloads</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.discovery-class.html"
-     >discovery</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.regex-class.html"
+    <a target="mainFrame" href="pywebfuzz.fuzzdb.Discovery-class.html"
+     >Discovery</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.attack_payloads-class.html"
+     >attack_payloads</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.regex-class.html"
      >regex</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.wordlists_misc-class.html"
      >wordlists_misc</a><br />    <a target="mainFrame" href="pywebfuzz.fuzzdb.wordlists_user_passwd-class.html"
      >wordlists_user_passwd</a><br />  <h2 class="toc">Functions</h2>
